--- a/Website/HTML/index/index.html
+++ b/Website/HTML/index/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="Header">
+    <div class="header">
         <h1>Hello World!</h1>
     </div>
     
