--- a/Website/HTML/index/index.html
+++ b/Website/HTML/index/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <div class="header">
-        <h1>Hello World!</h1>
+        <center>
+           <h1>Hello World!</h1> 
+        </center>
     </div>
-    
 </body>
 </html>
