--- a/Website/HTML/index/index.html
+++ b/Website/HTML/index/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +8,14 @@
     <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
+
 <body>
     <div class="header">
-        <h1>Hello World!</h1> 
+        <center>
+            <h1>Hello World!</h1>
+        </center>
+
     </div>
 </body>
+
 </html>
